# Trabalho-LP

./: LICENSE  README.md  Trabalho-LP.cabal  plano.txt
T1/: .cabal  CHANGELOG.md
T1/app/: ComputerAI.hs  Main.hs  Utils.hs
T1/dist-newstyle/cache/: compiler  improved-plan  solver-plan  source-hashes  up-to-date
T1/dist-newstyle/packagedb/ghc-9.4.7/: Trabalho-LP-0.1.0.0-inplace.conf
T1/src.save0/: Main.hs
T2/: ast.rkt  interpreter.1  interpreter.bak  interpreter.rkt  lexer.rkt
T2/compiled/drracket/errortrace/: ast_rkt.dep
T2/dcc019/exercise/logic/: interpreter.rkt  parser.rkt
T2/dcc019/exercise/logic/compiled/drracket/errortrace/: ast_rkt.zo
T2/dcc019/exercise/logic/examples/: e1.rkt  e2.rkt
T2/dcc019/exercise/logic/lang/: reader.rkt
T2/examples/: teste.pl
app/: ComputerAI.hi  ComputerAI.hs  GameLogic.hi  GameLogic.hs  Main.hi  Main.hs  Utils.hi  Utils.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.7/: package.cache
dist-newstyle/packagedb/ghc-9.4.8/: Trabalho-LP-0.1.0.0-inplace.conf  package.cache
src/: ComputerAI.hs  Main.hs  Utils.hs
